manifests/advanced-policies/backend-zone/30-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-zone
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
