manifests/advanced-policies/backend-zone/40-networkpolicy-backend-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-default-deny-ingress
  namespace: backend-zone
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
