manifests/advanced-policies/backend-zone/50-ciliumnetworkpolicy-allow-frontend-zone-to-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-zone-to-backend
  namespace: backend-zone
spec:
  endpointSelector:
    matchLabels:
      app: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
        k8s:io.kubernetes.pod.namespace: frontend-zone
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
